Add todo items in comments.

--- a/dbi/dbi-intro.tex
+++ b/dbi/dbi-intro.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % % 
 % dbi-intro.tex - Ian Huston
-% $Id: dbi-intro.tex,v 1.1 2009/07/20 10:46:00 ith Exp $
+% $Id: dbi-intro.tex,v 1.2 2009/07/20 10:49:57 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: dbi-intro.tex,v 1.1 2009/07/20 10:46:00 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: dbi-intro.tex,v 1.2 2009/07/20 10:49:57 ith Exp $}
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
@@ -86,7 +86,9 @@ observable scales cross the Hubble radius, and
 we find in general that the tensor-scalar ratio must satisfy 
 $r \, \lsim \, 10^{-7}$. This 
 is below the projected sensitivity of future Cosmic Microwave Background (CMB) polarization 
-experiments \cite{clover,vpj}. On the other hand, the WMAP3 data 
+experiments \cite{clover,vpj}. 
+% TODO: Change to WMAP5
+On the other hand, the WMAP3 data 
 favours a red perturbation spectrum with 
 $n_s<1$ when the tensor modes are negligible and 
 the scalar spectral index is effectively constant \cite{spergel}. 
@@ -108,6 +110,7 @@ We then show that such conditions can be realized in a recently
 proposed IR version of DBI inflation driven
 by multiple coincident branes \cite{thomasward}. 
 
+% TODO: Change to chapter structure.
 The paper is organized as follows. We briefly review DBI inflation 
 in Section \ref{sec:dbiinflation}. In Sections \ref{sec:upper} and  
 \ref{sec:lower}, we derive the respective 
@@ -226,6 +229,7 @@ Depending on the reheating
 temperature, this occurred some 30 to 60 e-foldings before the end of 
 inflation. The inflationary dynamics during this phase can  
 be quantified in terms of three parameters: 
+% TODO: Link to slow roll introduction
 \begin{eqnarray}
 \label{defepsilon}
 \epsilon \equiv -\frac{\dot{H}}{H^2}
@@ -257,6 +261,7 @@ P_T^2 = \frac{2}{\pi^2} \frac{H^2}{\Mpl^2}
 respectively, where the quantities on the right-hand sides are evaluated 
 when the scale with comoving wavenumber $k=aH\gamma$ crossed 
 the Hubble radius during inflation.  
+% TODO: Talk about difference with standard k=aH
 The tensor-scalar ratio, $r \equiv P_T^2/P_S^2$, is directly related to 
 the tensor spectral index by \cite{gm}
 \begin{equation}
@@ -275,7 +280,9 @@ $n_s = 0.948^{+0.015}_{-0.018}$ for a prior of $r = 0$ \cite{spergel}.
 
 A further important consequence of a small sound speed is that departures  
 from purely Gaussian statistics may be large 
-\cite{brane6,brane11,lidser3,chenetal}. It is conventional 
+\cite{brane6,brane11,lidser3,chenetal}. 
+% TODO: Reference introduction and fnl explanation
+It is conventional 
 to quantify such deviations by expressing the non-Gaussian curvature 
 perturbation ${\cal{R}}$ in the form 
 ${\cal{R}} ={\cal{R}}_G+f_{NL}
@@ -291,6 +298,7 @@ is given to leading-order by \cite{chenetal,lidser2}
 \label{fnlcs}
 f_{NL} = \frac{1}{3} \left( \frac{1}{c_s^2} -1 \right) \,.
 \end{equation}
+% TODO: Change to WMAP5 numbers
 Currently, WMAP3 constrains this parameter  
 to be ${| f_{NL} |} \, {\lsim} \, {300}$ \cite{spergel,crim}.  
 
@@ -305,6 +313,7 @@ during observable inflation:
 where a subscript `$*$' denotes that the quantity is to be evaluated 
 at that epoch. 
 
+% TODO: Change to chapter references
 In the following, we first consider the UV version of DBI inflation,
 where the brane moves relativistically 
 towards the tip of the throat. We will assume implicitly 
