--- a/dbi/dbi-intro.tex
+++ b/dbi/dbi-intro.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % % 
 % dbi-intro.tex - Ian Huston
-% $Id: dbi-intro.tex,v 1.2 2009/07/20 10:49:57 ith Exp $
+% $Id: dbi-intro.tex,v 1.3 2009/07/20 13:29:13 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: dbi-intro.tex,v 1.2 2009/07/20 10:49:57 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: dbi-intro.tex,v 1.3 2009/07/20 13:29:13 ith Exp $}
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
@@ -326,3 +326,27 @@ quasi-exponential expansion can be maintained to solve the horizon problem of
 the hot big bang model. 
 % 
 %
+
+% % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
+% ========================================================= %
+% % % % % % % % % % % % % % % % % % % % % % % % % % % % % % %
+% Intro from multibrane paper, fold back into dbi-intro chapter.
+% TODO: Put back into introduction above.
+The quest to realise inflation within string/M-theory continues to 
+attract considerable attention. The Dirac-Born-Infeld (DBI) scenario 
+of the compactified type IIB theory is a well-motivated model, 
+in which inflation is driven by one or more ${\rm D}$-branes 
+propagating in a warped `throat' background
+\cite{brane1,brane11,brane12,brane13,brane2,brane20,brane3,brane4,brane5,brane6}
+. Such a background is generated 
+by the non-trivial form-field fluxes over the internal dimensions. 
+(For recent reviews, see
+\cite{tyereview,McAllister:2007bg,Lorenz:2007ze,Kallosh:2007wm,Bean:2007eh,bean,
+cline}.) 
+In the simplest version of the scenario, 
+the inflaton parametrizes the radial 
+position in the throat of a single ${\rm D3}$-brane. 
+The brane dynamics are determined by the DBI action in such a 
+way that the inflaton's kinetic energy is bounded from above by the warped 
+brane tension. The regime where this bound is nearly saturated is 
+known as the `relativistic' limit.
